# boilert

./: .gitignore  Cargo.toml  README.md  SLINT_UI.md  build.rs  config.toml
src/: config.rs  main.rs  sensors.rs
ui/: app-window.slint  boiler.slint  dashboard.slint  pages.slint  sensot.slint  stats.slint  styles.slint  thermometre.slint
