[package]
name = "boilert"
version = "1.0.0"
edition = "2024"


[dependencies]
slint = "1.12.1"
tokio = { version = "1.42.2", features = ["full"] }
rumqttc = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
rand = "0.8"

[features]
pi = []

[build-dependencies]
slint-build = "1.12.1"
